<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.zebra.sample.multifragmentsample1.ui.second.SecondViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.second.SecondFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFragment2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:itemCount="2"
            app:layout_constraintBottom_toTopOf="@+id/swScanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:listitem="@layout/layout_result" />

        <Button
            android:id="@+id/buttonSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/scanner_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/current_profile"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/tvScannerStatus2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tvProfile2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:text="TextView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#DBB001"
            android:text="@string/soft_scan"
            android:onClick="@{()->viewModel.onSoftScan()}"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSecond"
            app:layout_constraintEnd_toStartOf="@+id/buttonSecond"
            app:layout_constraintStart_toStartOf="@+id/rvFragment2"
            app:layout_constraintTop_toTopOf="@+id/buttonSecond" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swScanner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:checked="@{viewModel.isScanEnable}"
            android:text="@string/enable_disable_scanner"
            app:layout_constraintBottom_toTopOf="@+id/clScanParams"
            app:layout_constraintEnd_toEndOf="@+id/rvFragment2"
            app:layout_constraintStart_toStartOf="@+id/rvFragment2"
            tools:text="Enable scanner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clScanParams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFEEEE"
            android:visibility="@{viewModel.isScanEnable? View.VISIBLE :View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/buttonSecond"
            app:layout_constraintEnd_toEndOf="@+id/rvFragment2"
            app:layout_constraintStart_toStartOf="@+id/rvFragment2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/config_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkBox">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dw_scanner"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:entries="@{viewModel.dwScanners}"
                android:onItemSelected="@{(p1,p2,pos,p3)->viewModel.onScannerSelect(pos)}"
                android:selectedItemPosition="@={viewModel.selectedPosition}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewModel.isDecodeScreen}"
                android:text="@string/decode_screen_notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@={viewModel.isPicklistEnable}"
                android:text="@string/picklist"
                app:layout_constraintEnd_toEndOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:onClick="@{()-> viewModel.setConfig()}"
                android:text="@string/switch_params"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkBox"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>